--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 
 <body>
   <h1>Luke Johnson</h1>
+  <nav>
+    <ul>
+        <li><a href="prototype/index.html">First Html Assignmnent</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
