--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>IFSC 11003 | Luke Johnson</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Luke Johnson">
+  <link href="assets/css" rel="stylesheet" />
 
 </head>
 
