--- a/css-demo/idex.html
+++ b/css-demo/idex.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="Keyword rich narrative on site purpose">
   <meta name="author" content="Thomas Wallace">
-  <link href="path/to/style.css" rel="stylesheet" />
+  <link href="path/to/style.css" rel="stylesheet" >
 </head>
 
 <body>
