--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
   <title>IFSC 11003 | Luke Johnson</title>
   <meta name="description" content="Keyword Rich Description">
