--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <ul>
         <li><a href="prototype/index.html">First Html Assignmnent</a></li>
         <li><a href="css-demo/index.html">CSS Demo</a></li>
+        <li><a href="assets/img/css-diner.jpg">CSS Diner</a></li>
     </ul>
   </nav>
 </body>
