--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <li><a href="prototype/index.html">First Html Assignmnent</a></li>
         <li><a href="css-demo/index.html">CSS Demo</a></li>
         <li><a href="assets/img/css-diner.jpg">CSS Diner</a></li>
+        <li>positioning Lab</li>
+         <ul>
+          <li><a href="positioning-lab/absolute-1.html">absolute-1</a></li>
+          <li><a href="positioning-lab/absolute-2.html">absolute-2</a></li>
+          <li><a href="positioning-lab/float-1.html">float-1</a></li>
+          <li><a href="positioning-lab/float-2.html">float-2</a></li>
+         </ul>
     </ul>
   </nav>
 </body>
