--- a/positioning-lab/float-2.html
+++ b/positioning-lab/float-2.html
@@ -34,18 +34,36 @@
     }
     #navy {
       background-color: #001f3f;
+      width: 160px;
+      height:150px;
+      margin:20px;
+      float: left;
     }
     #teal {
       background-color: #39CCCC;
+      width: 160px;
+      height:150px;
+      margin:20px;
+      float: left;
     }
     #blue {
       background-color: #0074D9;
+      width: 160px;
+      height:150px;
+      margin:20px;
+      float: left;
     }
     #aqua {
       background-color: #7FDBFF;
+      width: 160px;
+      height:150px;
+      margin:20px;
+      float:left;
     }
     #footer {
       background-color: #666;
+      clear:both;
+      margin:20px;
     }
     h1 {
       color: #000;
