--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -31,21 +31,49 @@
       margin-right: auto;
       margin-left: auto;
       text-shadow: 2px 2px #000;
+      
     }
     #navy {
       background-color: #001f3f;
+      width:370px;
+      height:150px;
+      float:right;
+      float:left;
+      margin-left:20px;
+      margin-top:20px;
     }
     #teal {
       background-color: #39CCCC;
+       width:370px;
+      height:150px;
+      float:left;
+      float:right;
+      margin-right:20px;
+      margin-top:20px;
     }
     #blue {
       background-color: #0074D9;
+       width:370px;
+      height:150px;
+      float:right;
+      float:left;
+      margin-left:20px;
+      margin-top:20px;
     }
     #aqua {
       background-color: #7FDBFF;
+       width:370px;
+      height:150px;
+      float:left;
+      float:right;
+      margin-right:20px;
+      margin-top:20px;
     }
     #footer {
       background-color: #666;
+      margin:20px;
+      margin-top:370px;
+      clear: both;
     }
     h1 {
       color: #000;
