--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
           <li><a href="positioning-lab/absolute-2.html">absolute-2</a></li>
           <li><a href="positioning-lab/float-1.html">float-1</a></li>
           <li><a href="positioning-lab/float-2.html">float-2</a></li>
+          </ul>
+        <li>CSS-Grid-Layout-lab</li>
+        <ul>
+        <li><a href="CSS-grid-layout-lab/Two-Column-Right-Align">Two-Column-Right-Align</a></li>
+        <li><a href="CSS-grid-layout-lab/Two-Column-Left-Align">Two-Column-Left-Align</a></li>
+        <li><a href="CSS-grid-layout-lab/Two-Column-Stacked">Two-Column-Stacked</a></li>
+        <li><a href="CSS-grid-layout-lab/Two-Column-Equal">Two-Column-Equal</a></li>
          </ul>
+        <li><a href="Mars-rover-v1/assets/css">Mars-rover-v1</a></li>
     </ul>
   </nav>
 </body>
