--- a/positioning-lab/absolute-2.html
+++ b/positioning-lab/absolute-2.html
@@ -8,7 +8,7 @@
   <title>Positioning Lab</title>
   <style type="text/css">
     /* ---------------Box Sizing----------------- */
-    html {
+   html {
       box-sizing: border-box;
     }
     *,
@@ -31,21 +31,42 @@
       margin-right: auto;
       margin-left: auto;
       text-shadow: 2px 2px #000;
+      position:relative;
+      height:800px;
     }
+#wrapper div{
+  width:100px;
+  height:100px;
+}
+
     #navy {
       background-color: #001f3f;
+      position:absolute;
+      top:0;
+      left:0;
+      z-index:1;
     }
     #teal {
       background-color: #39CCCC;
+      position:absolute;
+      top:0;
+      right:0;
     }
     #blue {
       background-color: #0074D9;
+      position:absolute;
+      bottom:0;
+      left:0;
     }
     #aqua {
       background-color: #7FDBFF;
+      position:absolute;
+      bottom:0;
+      right:0;
     }
     #footer {
       background-color: #666;
+      margin:350px auto;
     }
     h1 {
       color: #000;
